# AI_Quantitative_Tutorial

./: .env  .gitignore  LICENSE  README.md  install.py  main_server.py  prompt.md  pyproject.toml  run.py  stock_data.db  tutorial_01.md  tutorial_02.md  首先粗粗看看.md
core/: deal_pics.py  pipeline.py
z_using_files/backtrader/: Backtrader-交易-核心-03.md  Backtrader-交易-核心-04.md  Backtrader-交易-核心-05.md  Backtrader-介绍-01.md
z_using_files/backtrader_code/: strategy_01.py  zz500_data.py
z_using_files/test/: test_bt.py  test_bt_01.py  test_sql_cache.py  test_torch.py  test_yfinance.py
z_utils/: proxy.py  stock_sqlite.py  stock_utils.py
