[project]
name = "AI_Quantitative_Tutorial"
version = "0.1.0"
description = "AI_Quantitative_Tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "easy-media-utils>=0.1.5",
    "litserve>=0.2.6",
    "matplotlib>=3.10.3",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "termcolor>=2.5.0",
    "yfinance>=0.2.65",
]

[tool.setuptools]
py-modules = []

